# account

./: Cargo.toml  Dockerfile  README.md  docker-compose.example.yml
.github/workflows/: docker-image.yml
src/: authenticate.rs  cleanup.rs  constants.rs  environment.rs  errors.rs  main.rs  opaque.rs  passkey.rs  utilities.rs
src/database/: mod.rs  passkey.rs  settings.rs  user.rs
src/routes/: account_settings.rs  current_user.rs  delete.rs  delete_avatar.rs  delete_passkey.rs  forgot.rs  get_passkey.rs  login.rs  login_passkey.rs  logout.rs  logout_all.rs  logout_other.rs  mfa.rs  mod.rs  profile_settings.rs  register.rs  register_passkey.rs  update_email.rs  update_password.rs  user.rs  validate.rs
